// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup tests Popup render tests matches the snapshot when closed 1`] = `
<div
  className="popup"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    id="backgroundCover"
    onClick={[MockFunction]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .5)",
        "height": "100%",
        "position": "fixed",
        "top": "0",
        "width": "100%",
      }
    }
  />
  <TitleBox
    icon={
      <i
        className="fa fa-times"
        style={
          Object {
            "color": "darkslategray",
            "fontSize": "24px",
          }
        }
      />
    }
    iconOnClick={[MockFunction]}
    iconTitle="Close"
    id="testPopupId"
    open={true}
    style={
      Object {
        "height": "10px",
        "left": "calc(50% - 0.5 * 10px)",
        "position": "fixed",
        "top": "calc(50% - 0.5 * 10px)",
        "width": "10px",
      }
    }
    title="testPopupTitle"
  >
    titleBoxContent
  </TitleBox>
</div>
`;

exports[`Popup tests Popup render tests matches the snapshot when open 1`] = `
<div
  className="popup"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    id="backgroundCover"
    onClick={[MockFunction]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .5)",
        "height": "100%",
        "position": "fixed",
        "top": "0",
        "width": "100%",
      }
    }
  />
  <TitleBox
    icon={
      <i
        className="fa fa-times"
        style={
          Object {
            "color": "darkslategray",
            "fontSize": "24px",
          }
        }
      />
    }
    iconOnClick={[MockFunction]}
    iconTitle="Close"
    id="testPopupId"
    open={true}
    style={
      Object {
        "height": "10px",
        "left": "calc(50% - 0.5 * 10px)",
        "position": "fixed",
        "top": "calc(50% - 0.5 * 10px)",
        "width": "10px",
      }
    }
    title="testPopupTitle"
  >
    titleBoxContent
  </TitleBox>
</div>
`;
